force-app/main/default/objects/QI_Line__c/QI_Line__c.object-meta.xml
<CustomObject>
    <description>Scored checklist line on a Quality Inspection. One row per item across the six QI categories.</description>
    <label>QI Line</label>
    <nameField>
        <displayFormat>QIL-{0000}</displayFormat>
        <label>QI Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QI Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>