force-app/main/default/objects/QI_Line__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sod &amp; Turf</fullName>
            </value>
            <value>
                <fullName>Plant Material</fullName>
            </value>
            <value>
                <fullName>Grading &amp; Drainage</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Site Cleanup</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>