force-app/main/default/objects/QI_Line__c/fields/Photo_Attached__c.field-meta.xml
<CustomField>
    <fullName>Photo_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo Attached</label>
    <type>Checkbox</type>
</CustomField>