force-app/main/default/objects/QI_Line__c/fields/Quality_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Quality_Inspection__c</fullName>
    <label>Quality Inspection</label>
    <referenceTo>Quality_Inspection__c</referenceTo>
    <relationshipLabel>QI Lines</relationshipLabel>
    <relationshipName>QI_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>