force-app/main/default/objects/QI_Line__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Quality inspection score for this item, 1 to 10. 9 or higher passes; below 9 fails the item and routes the job to Customer Care.</description>
    <label>Score (1-10)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>